# AgentsLoop-CLI

./: .env.example  .envrc  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix  install.sh  pyproject.toml
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
agents/: .env.example  README.md  pyproject.toml
agents/prompts/: cto_prompt.md  developer_prompt.md
agents/src/agentic_workflows/: app.py  cli.py  orchestrator.py  paths.py  worker.py
agents/src/agentic_workflows/domain/: models.py
agents/src/agentic_workflows/nodes/: __init__.py  ci.py  cto.py  developer.py
agents/src/agentic_workflows/runtime/: agent_runner.py  git_runtime.py  providers.py  templates.py  workflow_launcher.py
agents/src/agentic_workflows/storage/: json_store.py
agents/src/agentic_workflows/tui/: __init__.py  app.py  screens.py  theme.py  widgets.py
agents/tests/: test_agentic_workflows.py
scripts/: quiet-run.sh
src/agentsloop/: __init__.py  app.py  cli.py  orchestrator.py  paths.py  project_config.py  worker.py
src/agentsloop/domain/: __init__.py  models.py
src/agentsloop/nodes/: cto.py  developer.py  validation.py
src/agentsloop/prompts/: cto_prompt.md  developer_prompt.md
src/agentsloop/runtime/: __init__.py  agent_runner.py  git_runtime.py  providers.py  templates.py  workflow_control.py  workflow_launcher.py
src/agentsloop/storage/: __init__.py  json_store.py
src/agentsloop/tui/: __init__.py  app.py  screens.py  theme.py  widgets.py
tests/: test_agentsloop.py
