[project]
name = "agentic-workflows"
version = "0.1.0"
description = "Textual TUI for the CTO/developer/CI agentic workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "orjson>=3.11.6",
    "pydantic>=2.5.0",
    "rich>=14.1.0",
    "textual>=6.5.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[project.scripts]
agents = "agentic_workflows.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_workflows"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "N", "D", "ANN"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
